--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-	"dev": "node server.js"
+	"dev": "node server.js",
+    "compile": "node ./ethereum/compile.js",
+    "deploy": "node ./ethereum/deploy.js"
   },
   "keywords": [],
   "author": "",
